# qcoap

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  cantcoap.cpp  cantcoap.h  coap.cpp  coap.h  coap_pdu.cpp  coap_pdu.h  coap_private.h  coapnode.cpp  coapnode.h  main.cpp  qcoap.pro
doc/: .gitignore  Doxyfile
doc/source/: conf.py  index.rst
examples/: examples.pro
examples/client/: client.pro  main.cpp
examples/quick/: main.cpp  main.qml  quick.pro
src/: CMakeLists.txt  coap_global.h  coapbridge.cpp  coapbridge.h  coapbridge_p.h  coapnode.cpp  coapnode.h  coapnode_p.h  coappdu.cpp  coappdu.h  dqobject.cpp  dqobject.h  src.pro
src/lib/: coap.cpp  coap.h  coapendpoint.cpp  coapendpoint.h  coapendpoint_p.h  coapendpointinfo.cpp  coapendpointinfo.h  coapexchange.cpp  coapexchange.h  coapexchange_p.h  coapexchangeparameters.cpp  coapexchangeparameters.h  coaplib_global.h  coapmessage.cpp  coapmessage.h  coappdu.cpp  coappdu.h  coaprequest.cpp  coaprequest.h  coaprequest_p.h  coaptimerqueue.cpp  coaptimerqueue.h  coapuri.cpp  coapuri.h  lib.pro  nodeswatcher.cpp  nodeswatcher.h  timerqueue.cpp  timerqueue.h
src/lib/stack/: classifierlayer.cpp  classifierlayer.h  ilayer.cpp  ilayer.h  layerbase.cpp  layerbase.h  midaddressportkey.h  reliabilitylayer.cpp  reliabilitylayer.h  udplayer.cpp  udplayer.h
src/quick/: exchangesingleton.cpp  exchangesingleton.h  qmldir  quick.pro  quick_plugin.cpp  quick_plugin.h
tests/: CMakeLists.txt  tests.pro
tests/complex/: complex.pro  main.cpp
tests/copper/: CMakeLists.txt  copper_test.cpp
tests/core/: core.pro  tst_coretest.cpp
